# cod_py_08

./: README.md  exemplo_00.py  pokemon.db  pyproject.toml
src/: schema.py
